--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,9 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.env-vars-table {
+  margin: 2rem 0;
+  font-family: "Inter", sans-serif;
+  font-size: 0rem;
+}
